Fixes #10547 - Cannot customize Executor on WebSocketClient.
The HttpClient and WebSocketComponents will now try to share as many components as possible.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>