@@ -42,7 +42,6 @@ import org.eclipse.jetty.websocket.api.UpgradeRequest;
 import org.eclipse.jetty.websocket.api.util.WSURI;
 import org.eclipse.jetty.websocket.client.ClientUpgradeRequest;
 import org.eclipse.jetty.websocket.client.WebSocketClient;
-import org.eclipse.jetty.websocket.core.WebSocketComponents;
 import org.eclipse.jetty.websocket.server.config.JettyWebSocketServletContainerInitializer;
 import org.eclipse.jetty.websocket.tests.AnnoMaxMessageEndpoint;
 import org.eclipse.jetty.websocket.tests.CloseTrackingEndpoint;
@@ -62,6 +61,7 @@ import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.hamcrest.Matchers.nullValue;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertSame;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
@@ -130,34 +130,6 @@ public class WebSocketClientTest
         {
             httpClient.start();
             WebSocketClient webSocketClient = new WebSocketClient(httpClient);
-            try
-            {
-                webSocketClient.start();
-                Executor inuseExecutor = webSocketClient.getExecutor();
-                assertSame(executor, inuseExecutor);
-            }
-            finally
-            {
-                webSocketClient.stop();
-            }
-        }
-        finally
-        {
-            httpClient.stop();
-        }
-    }
-
-    @Test
-    public void testCustomizeWebSocketComponentsExecutor() throws Exception
-    {
-        HttpClient httpClient = new HttpClient();
-        try
-        {
-            httpClient.start();
-            Executor executor = Executors.newFixedThreadPool(50);
-            WebSocketComponents webSocketComponents = new WebSocketComponents(null, null,
-                null, null, null, executor);
-            WebSocketClient webSocketClient = new WebSocketClient(httpClient, webSocketComponents);
             try
             {
                 webSocketClient.start();
@@ -330,6 +302,7 @@ public class WebSocketClientTest
             assertThat("Message", received, containsString("Hello World"));
 
             ByteBuffer bufReceived = cliSock.binaryMessageQueue.poll(5, TimeUnit.SECONDS);
+            assertNotNull(bufReceived);
             received = BufferUtil.toUTF8String(bufReceived.slice());
             assertThat("Message", received, containsString(parts[0] + parts[1] + parts[2]));
         }
@@ -404,7 +377,7 @@ public class WebSocketClientTest
         request.setSubProtocols("echo");
         Future<Session> future = client.connect(cliSock, wsUri, request);
 
-        try (Session sess = future.get(5, TimeUnit.SECONDS))
+        try (Session ignored = future.get(5, TimeUnit.SECONDS))
         {
             Assertions.assertTrue(cliSock.openLatch.await(1, TimeUnit.SECONDS));
 
@@ -425,7 +398,7 @@ public class WebSocketClientTest
     }
 
     /**
-     * Ensure that <code>@WebSocket(maxTextMessageSize = 100*1024)</code> behaves as expected.
+     * Ensure that {@code @WebSocket(maxTextMessageSize = 100*1024)} behaves as expected.
      *
      * @throws Exception on test failure
      */
@@ -456,6 +429,7 @@ public class WebSocketClientTest
 
             // wait for message from server
             String received = cliSock.messageQueue.poll(5, TimeUnit.SECONDS);
+            assertNotNull(received);
             assertThat("Message", received.length(), is(size));
         }
     }
@@ -480,9 +454,9 @@ public class WebSocketClientTest
             Map<String, List<String>> parameterMap = req.getParameterMap();
             assertThat("Parameter Map", parameterMap, notNullValue());
 
-            assertThat("Parameter[snack]", parameterMap.get("snack"), is(Arrays.asList(new String[]{"cashews"})));
-            assertThat("Parameter[amount]", parameterMap.get("amount"), is(Arrays.asList(new String[]{"handful"})));
-            assertThat("Parameter[brand]", parameterMap.get("brand"), is(Arrays.asList(new String[]{"off"})));
+            assertThat("Parameter[snack]", parameterMap.get("snack"), is(List.of("cashews")));
+            assertThat("Parameter[amount]", parameterMap.get("amount"), is(List.of("handful")));
+            assertThat("Parameter[brand]", parameterMap.get("brand"), is(List.of("off")));
 
             assertThat("Parameter[cost]", parameterMap.get("cost"), nullValue());
 
